--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "joi": "^17.5.0",
     "mysql2": "^2.3.0",
+    "node-rest-client": "^3.1.0",
     "nodemon": "^2.0.13",
     "sequelize": "^6.6.5"
   }
